# gpt-recommender

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  app.py  pyproject.toml
.devcontainer/: devcontainer.json
cfg/: base.local.yaml  base.oai.yaml  cfg.md
src/consultant/: __init__.py  agents.py  base_types.py  cache.py  config.py  constants.py  consultant.py  formatter.py  models.py
src/consultant/agents/: __init__.py  web.py
src/consultant/parsers/: __init__.py  books.py  default.py  movies.py
src/consultant/prompts/: __init__.py  books.py  formatter.py  general.py  movies.py
