[metadata]
author = "6hl"
author_email = "6hl@github.com"

[project]
name = "consultant"
version = "1.0.0"

dependencies = [
    "pandas",
    "pydantic",
    "python-dotenv",
    "PyYAML",
    "requests",
    "tabulate",
]

[tool.setuptools.packages.find]
where = ["src/"]

# Add optional dependencies here
[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pyright",
    "yamllint",
    "black",
]